-bug#0001293: When Creating Data Query Graphs, Performing Search will Cause List to Disappear
-bug#0001294: Stack overflow if database is not correctly initialized
-bug#0001295: Division by zero when rrd_step < poller_interval
-bug#0001296: add_graphs.php does not add the graph template to the host 
-bug#0001299: When creating graphs the entire poller cache is recreated for a host
-bug#0001320: Invalid PHP_SELF Path
-bug#0001326: If a user's password contains a single quote the login fails
-bug: Remove include/html files to mitigate XSS issues
-bug: IE generates errors on both the host and graph settings pages
-bug: Host save failed in FireFox 3 for non-SNMP V3 hosts, complaining about "password mismatch"
-bug: Initialization of snmp_auth when using SNMP=NONE
-bug: Speed up add_graphs.php in most cases (still slow only if --input-fields is used)
-bug: If the poller_output table is not empty, don't flood the log
-bug: Remove warnings appear in the httpd log relative to reset attempts on settings array
-bug: Add API Automation tool quietMode to additional functions
-bug: When Cacti is launched from within an iframe, cookies are dropped from IE6
-bug: Database upgrade and cacti.sql differ
-bug: drop color setting background on FF does not work
-bug: cli/add_tree.php requires as least a host-id for --list-graphs
-bug: add_tree.php did not allow nodes with propagating sort options
-bug: When adding a tree node via the api numeric and natural were reversed
-bug: When saving a data query based data templates, their data sources would become corrupt
-bug: If your system contains INNODB tables, the Technical Support page would hang
-bug: The default user tree link icon would not be properly highlighted when opening graphs
-bug: Severe performance problems when adding data query based graphs.
-bug: Default refresh on Cacti Log was too quick
-bug: Some users don't like the idea of automatic page refreshes
-bug: Allow more rows to be visible in Cacti pages